--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@heroicons/react": "^2.1.5",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "proxy": "http://0.0.0.0:4242",
   "devDependencies": {
