--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "date-fns": "^4.1.0",
     "next": "14.2.13",
+    "node-cron": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5"
@@ -20,6 +22,7 @@
   "proxy": "http://0.0.0.0:4242",
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
