--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "next": "14.2.13",
     "node-cron": "^3.0.3",
+    "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
