--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "date-fns": "^4.1.0",
+    "fs": "^0.0.1-security",
     "next": "14.2.13",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.16",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
