--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "cronitor": "^2.4.1",
     "date-fns": "^4.1.0",
     "fs": "^0.0.1-security",
     "next": "14.2.13",
